# RootRoot

./: readme.MD  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/android/rootroot/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hidden_detector.cpp  native_detector.cpp
app/src/main/java/com/android/rootroot/: Constants.java  MainActivity.kt  NativeDetector.java  RootingDetector.java
app/src/main/java/io/github/johnjung/rootroot/: Constants.java  MainActivity.kt  NativeDetector.java  RootingDetector.java
app/src/main/res/drawable/: bg_card.xml  bg_scan_button.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/android/rootroot/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
